@@ -1,7 +1,6 @@
 package ourstory.events;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import org.bukkit.Material;
 import org.bukkit.damage.DamageSource;
@@ -15,10 +14,7 @@ import org.bukkit.inventory.ItemStack;
 import ourstory.utils.EnchantItem;
 
 public class onZombieDeath implements Listener {
-	/*
-	 * If a zombie if killed by fire, makes him drop leather instead of rotten flesh
-	 */
-	private final List<EntityType> zombies = Arrays.asList(
+	private static final List<EntityType> ZOMBIES = List.of(
 			EntityType.ZOMBIE,
 			EntityType.HUSK,
 			EntityType.DROWNED,
@@ -26,38 +22,34 @@ public class onZombieDeath implements Listener {
 			EntityType.ZOMBIE_VILLAGER,
 			EntityType.ZOGLIN);
 
-
 	@EventHandler
 	public void zombieDeath(EntityDeathEvent entity) {
-		if (!zombies.contains(entity.getEntityType()))
+		if (!ZOMBIES.contains(entity.getEntityType()))
 			return;
 
 		boolean killedByFire = false;
 		DamageSource source = entity.getDamageSource();
+		if (source == null)
+			return;
 
-		// Check if killed from fire_aspect
-		if (source.getDamageType() == DamageType.PLAYER_ATTACK) {
-			Player p = (Player) source.getCausingEntity();
+		if (source.getDamageType() == DamageType.PLAYER_ATTACK && source.getCausingEntity() instanceof Player p) {
 			ItemStack weapon = p.getInventory().getItemInMainHand();
-
 			killedByFire = EnchantItem.getEnchantAmount(weapon, "fire_aspect") > 0;
+		} else if (source.getDamageType() == DamageType.ARROW && source.getDirectEntity() != null) {
+			killedByFire = source.getDirectEntity().getFireTicks() > 0;
 		}
 
-		// Check if killed by flamed arrow
-		if (source.getDamageType() == DamageType.ARROW)
-			killedByFire = source.getDirectEntity().getFireTicks() > 0;
+		if (!killedByFire && entity.getEntity().getFireTicks() <= 0)
+			return;
 
-		if (killedByFire || entity.getEntity().getFireTicks() > 0) {
-			List<ItemStack> temp = new ArrayList<>();
+		List<ItemStack> rottenFlesh = new ArrayList<>();
+		for (ItemStack drop : entity.getDrops())
+			if (drop.getType() == Material.ROTTEN_FLESH)
+				rottenFlesh.add(drop);
 
-			for (ItemStack drop : entity.getDrops())
-				if (drop.getType() == Material.ROTTEN_FLESH)
-					temp.add(drop);
-
-			for (ItemStack d : temp) {
-				entity.getDrops().add(new ItemStack(Material.LEATHER, d.getAmount()));
-				entity.getDrops().remove(d);
-			}
+		for (ItemStack d : rottenFlesh) {
+			entity.getDrops().add(new ItemStack(Material.LEATHER, d.getAmount()));
+			entity.getDrops().remove(d);
 		}
 	}
 }
